Atualizado palavra qml para maiúscula em todo arqtigo

--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -2,12 +2,13 @@
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
 \section{REFERENCIAL BIBLIOGRÁFICO}
-Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o qml. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTFul}, o \textit{Push Notification} e o JSON.
+Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o QML. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTFul}, o \textit{Push Notification} e o JSON.
 
 
-\subsection{O Qt e o qml}
-O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que  um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{qt_io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{qt_software}.\par
-O Qt possui um amplo apoio à internacionalização e outros recursos, tais como o acesso a um banco de dados \textit{SQL}, \textit{parsing} de XML, \textit{parsing} de JSON, gerenciamento de \textit{threads} e suporte a rede \cite{qt_gui_toolkit}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para construir interface gráfica, o qml. O qml é uma especificação de interface de usuário e linguagem de programação que permite a desenvolvedores e designers criar aplicativos de alta performance, fluidamente animados e visualmente atraentes. O qml oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{doc_qt_io}.
+\subsection{O Qt e o QML}
+O Qt é um \textit{toolkit} \textit{cross-platform} para desenvolvimento de aplicações com interface gráfica. O Qt é muito mais que um SDK, ele é uma estratégia de tecnologia que permite ao desenvolvedor, de forma rápida e econômica, projetar, desenvolver, implementar e manter uma aplicação multiplataforma oferecendo uma experiência de usuário perfeita em todos os dispositivos \cite{qt_io}. No entanto, programas sem interface gráfica podem ser desenvolvidos, como ferramentas de linha de comando e consoles para servidores \cite{qt_software}.\par
+
+O Qt possui um amplo apoio à internacionalização e outros recursos, tais como o acesso a um banco de dados \textit{SQL}, \textit{parsing} de XML, \textit{parsing} de JSON, gerenciamento de \textit{threads} e suporte a rede \cite{qt_gui_toolkit}. O Qt dispõe ainda de uma linguagem declarativa e interpretada para construir interface gráfica, o QML. O QML é uma especificação de interface de usuário e linguagem de programação que permite a desenvolvedores e designers criar aplicativos de alta performance, fluidamente animados e visualmente atraentes. O QML oferece uma sintaxe JSON, altamente legível e declarativa, com suporte para expressões imperativas JavaScript combinadas com ligações de propriedades dinâmicas \cite{doc_qt_io}.
 
 
 %<dizer os benefícios em trabalhar orientado a arquiteturas: controle intelectual, atendimento de requisitos não-funcionais, evolução, \textit{testability}, etc>%
@@ -71,10 +72,10 @@ O escopo desta arquitetura está focado em sistemas de informação, porém, nã
 Arquitetura para aplicações móveis abrange quatro camadas: Interação Humana-Computador, Aplicação Móvel, \textit{Middleware} e \textit{Enterprise Backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Neste trabalho, a arquitetura foi concentrada apenas nas camadas de interação, aplicação e \textit{middleware}.
 
 \subsubsection{Camada de Interação Humana-Computador}
-A camada de Interação Humana-Computador (mais conhecida como \textit{IHC}, interface de usuário ou simplesmente \textit{UI}) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do qml que corresponde ao carregamento e exibição de uma imagem na tela.
+A camada de Interação Humana-Computador (mais conhecida como \textit{IHC}, interface de usuário ou simplesmente \textit{UI}) define os elementos de interação entre o usuário e os recursos do aplicativo. De forma abstrata, a camada de interface do usuário descreve o tipo de mídia suportada pelo aplicativo (por exemplo, texto, gráficos, imagens, vídeo ou som), os tipos de mecanismos de entrada (por exemplo, teclado alfa-numérico, ponteiros de caneta ou toques na tela) e os tipos de mecanismos de saída (por exemplo, uma notificação na bandeja do sistema, a tela, os alto-falantes ou algum tipo de \textit{feedback} como vibrar o dispositivo) \cite{Pabllo:2008:MMA:1621087.1621128}. Um exemplo de um componente desta camada é o objeto \textit{Image} do QML que corresponde ao carregamento e exibição de uma imagem na tela.
 
 \subsubsection{Camada de Aplicação}
-A camada de aplicação corresponde ao processamento de ações e eventos provenientes da camada de interação com o usuário, como por exemplo, escutando eventos de toque e realizando processamento em segundo plano. Esta camada, corresponde a componentes não visuais e interagem diretamente com a camada de \textit{middleware}. Objetos da camada de aplicação podem por exemplo, gerenciar e controlar a criação de outros objetos. Um exemplo de objeto desta camada é o \textit{Loader} do qml, ele cria objetos dinamicamente e emite um sinal quando o item recém criado estiver pronto.
+A camada de aplicação corresponde ao processamento de ações e eventos provenientes da camada de interação com o usuário, como por exemplo, escutando eventos de toque e realizando processamento em segundo plano. Esta camada, corresponde a componentes não visuais e interagem diretamente com a camada de \textit{middleware}. Objetos da camada de aplicação podem por exemplo, gerenciar e controlar a criação de outros objetos. Um exemplo de objeto desta camada é o \textit{Loader} do QML, ele cria objetos dinamicamente e emite um sinal quando o item recém criado estiver pronto.
 
 \subsubsection{Camada de Middleware}
 A camada de \textit{middleware} intercala entre a camada de aplicação com a camada de \textit{backend}. O objetivo dessa camada é fornecer de forma abstrata e genérica um meio de comunicação entre o modelo de dados da aplicação com a camada de \textit{backend} \cite{Pabllo:2008:MMA:1621087.1621128}. Ela é também responsável por interagir com o meio de comunicação disponível no dispositivo abstraindo para a camada de aplicação qual foi a interface de hardware utilizada. Um exemplo de objeto que trabalha nessa camada é o \textit{RequestHttp} disponibilizado nesta arquitetura, ele é resposável por realizar requisições HTTP ao \textit{web service} de forma assíncrona, notificando o objeto da camada de aplicação quando a resposta for obtida.
@@ -100,7 +101,7 @@ Torna-se evidente que são muitos requisitos a serem considerados em um projeto 
 \subsection{Desenvolvimento Orientado a Componentes}
 O desenvolvimento de software orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
 
-O reuso de componentes é um recurso desta arquitetura, pois dispõe de dezesseis componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos qml que podem atender a diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
+O reuso de componentes é um recurso desta arquitetura, pois dispõe de dezesseis componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos QML que podem atender a diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
 
 
 %<introducao aos servicos web>%
