Realizado revisão e correções

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 }
 
 % Deactive with: \catcode`\"=12\relax % changes `"` back to normal
-\renewcommand{\rmdefault}{phv} % Arial
-\renewcommand{\sfdefault}{phv} % Arial
+% \renewcommand{\rmdefault}{phv} % Arial
+% \renewcommand{\sfdefault}{phv} % Arial
 
 \usepackage{ae}
 \usepackage{aecompl}
