--- a/references.bib
+++ b/references.bib
@@ -12,8 +12,13 @@
 	note 	 = "Acessado em: 22/07/2017. Disponível em: https://www.ufrgs.br/det/index.php/det/article/view/141"
 }
 
+@online{codigo_fonte_url,
+	title	= {Código fonte da arquitetura},
+	note	= "Disponível em: https://github.com/joseneas/tcc"
+}
+
 @online{doc_qt_io,
-    title   = {About qml applications},
+    title   = {About QML applications},
    	note 	= "Acessado em: 06/01/2018. Disponível em: http://doc.qt.io/qt-5/qmlapplications.html"
 }
 
