--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -29,7 +29,7 @@ Este trabalho teve como objetivo o projeto, implementação e avaliação de uma
 %--------------------------%
 %* Falar rapidamente de alguns aspectos técnicos: "implementado em Qt, bla, bla, bla ..."%
 %--------------------------%
-Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que facilitaram o desenvolvimento e o atendimento dos requisitos funcionais da arquitetura, além do qml, que é a linguagem implementada nos componentes reusáveis e deve ser utilizada na contrução de objetos de \textit{UI} pelos plugins.
+Para desenvolver este trabalho, foi utilizado o Qt, ele dispõe de APIs que facilitaram o desenvolvimento e o atendimento dos requisitos funcionais da arquitetura, além do QML, que é a linguagem implementada nos componentes reusáveis e deve ser utilizada na contrução de objetos de \textit{UI} pelos plugins.
 
 
 %--------------------------%
