Adicionado revisão e correções de algumas seções

--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -101,7 +101,7 @@ Torna-se evidente que são muitos requisitos a serem considerados em um projeto 
 \subsection{Desenvolvimento Orientado a Componentes}
 O desenvolvimento de software orientado a componentes é um paradigma da engenharia de software caracterizado pela composição de partes já existentes, ou desenvolvidas independentemente e que são integradas para atingir um objetivo final \cite{rafael_heider}. Construir novas soluções pela combinação de componentes desenvolvidos aumenta a qualidade e dá suporte ao rápido desenvolvimento, levando à diminuição do tempo de entrega do produto final ao mercado \cite{rafael_heider}. Os sistemas definidos através da composição de componentes permitem que sejam adicionadas, removidas e substituídas partes do sistema sem a necessidade de sua completa substituição. Com isso, o desenvolvimento baseado em componentes auxilia na manutenção do software, por permitir que o sistema seja atualizado através da integração de novos componentes ou atualização dos objetos já existentes \cite{szyperski_bosch_weck_1999}.\par
 
-O reuso de componentes é um recurso desta arquitetura, pois dispõe de quinze componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos QML que suportam diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
+O reuso de componentes é um recurso desta arquitetura, pois dispõe de onze componentes (visuais e não visuais) para auxiliar no desenvolvimento de novos aplicativos. Esses componentes são arquivos QML que suportam diferentes customizações através das propriedades disponibilizadas pelos objetos internos de cada componente. Os benefícios da componentização estão ligados a manutenibilidade, reúso, extensibilidade e escalabilidade \cite{D'Souza:1998:OCF:291139}.
 
 
 %<introducao aos servicos web>%
